# way_to_math

./: .gitignore  discounted_optimal_policy.npz  latex suite settings.md  profile.html  utils.typ  信息表(1).md
0_weekly_reports/wk10_1110/: wk10_1110.typ
0_weekly_reports/wk11_1117/: wk11_1117.typ
0_weekly_reports/wk12_1124/: refs.bib  wk12_1124.typ
0_weekly_reports/wk13_1201/: refs.bib  wk13_1201.typ
0_weekly_reports/wk14_1208/: wk14_1208.typ
0_weekly_reports/wk14_1208_1/: wk14_1208.typ
0_weekly_reports/wk15_1205/: wk15_1215.typ
0_weekly_reports/wk3_0922/: wk3_0922_.typ
0_weekly_reports/wk6_1013/: wk6_1013.typ
0_weekly_reports/wk8_1027/: wk8_1027.typ
0_weekly_reports/wk9_1103/: refs.bib  wk9_1103.typ
1_presentations/1-SYSU-ML_lecture_seminar-annealed_score_matching/: test.typ  wk_report_250910.typ
1_presentations/2-SYSU-BIMSA_joint_project-rule_learning/: wk_report_250910.typ
1_presentations/_PRIVATE-X-SYSU_BIMSA-research-Small_Data_Dis_Cplx_Dynamics_Equiv_NNs/: wk_report_250910.typ
1_presentations/_PUBLIC-X-SYSU_BIMSA-research-Small_Data_Dis_Cplx_Dynamics_Equiv_NNs/: RuijieHE_RuleLearning_EquivariantNNs.typ
2_projects/01_wSLYuan_Coupled_JJ/2_python_code/: coupled_junction .txt  coupled_junction_sdeint.py  log  main.py  pyproject.toml
2_projects/1_Micro-Robots_Locate_Cancer_Cells/: MRDistribution.eps  MagneticField.eps  Targeted Micro-Robots Locate Cancer Cells-Yuan.aux  Targeted Micro-Robots Locate Cancer Cells-Yuan.dvi  Targeted Micro-Robots Locate Cancer Cells-Yuan.tex  TotalMRConcentration.eps  TumorRegion.eps
2_projects/Coupled JJ/: coupledJ.m  detect_rare_events.m  junction_training_data.mat  run_complete_analysis.m  score_net_epoch_80.mat  simulate_coupled_junctions.m  train_score_network.m
2_projects/Targeted Micro-Robots Locate Cancer Cells/: DrugRelease.eps  Targeted Micro-Robots Locate Cancer Cells-Yuan.tex.bak
3_Learn/2_Lectures/0_MachineLearning/1_Midterm_homework/2_code/: hw1_applied.ipynb  playground.ipynb  pyproject.toml
3_Learn/x_Marxism/: 1 马理论总结讲座.md
4_Swarma_club/: 1_Nonlinear_System-Lecture_1-Notes.rar
4_Swarma_club/1_Nonlinear_System-Lecture_1-Notes/: Lec1-非线性动力学：从 Logistic 映射到复杂性阶梯.md
6_Lectures/0_MachineLearning/1_Midterm_homework/2_code/: pyproject.toml
6_Lectures/0_MachineLearning/2_Final_homework/2_code/: 3d_unet_cfg.yaml  3d_unet_res_cfg.yaml  3d_unet_res_se_cfg.yaml  dataset.json  dataset1.py  datasets.py  hdf5_convert.py  losses.py  main.py  models.py  profile.prof  pyproject.toml  trainer.py  transforms.py  utils.py  verify_hdf5.py  visualization.ipynb
6_Lectures/0_MachineLearning/2_Final_homework/2_code/archive_peak_loading_speed/: datasets.py  models.py  trainer.py  utils.py
6_Lectures/1_RandomProcess/: 25110801-何瑞杰-第7次作业.md
Maths/CalculusOnManifold/: 第一章 Euclid 空间上的函数.md
Maths/RandomProcess/: 25110801-何瑞杰-第3次作业.md  25110801-何瑞杰-第4次作业.md  25110801-何瑞杰-第5次作业.md  RandomProcess_Lec1.md  RandomProcess_Lec2.md  (+1 more)
SDE/: Evans-随机微分方程导论.md
(+111 files in other folders)
