[project]
name = "2-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dtreeviz>=2.2.2",
    "graphviz>=0.21",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy==1.26",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pystats>=0.1.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "statsmodels>=0.14.5",
    "sympy>=1.14.0",
]
