[project]
name = "2-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "nibabel>=5.3.3",
    "numpy==1.26",
    "pandas>=2.3.3",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torchvision>=0.24.1",
    "wandb>=0.23.1",
]
